# ArtSleuth

./: .gitignore  CITATION.cff  COMMIT_MSG.tmp  CONTRIBUTING.md  README.md  deploy_space.py  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
artsleuth/: __init__.py  config.py
artsleuth/benchmarks/: __init__.py  benchmark_results.json  benchmark_table.md  evaluate.py  forgery_validation_results.json  wikiart.py
artsleuth/cli/: __init__.py  main.py
artsleuth/core/: __init__.py  adversarial.py  attribution.py  brushstroke.py  explainability.py  forgery.py  pipeline.py  style.py  temporal.py  workshop.py
artsleuth/mcp/: __init__.py  server.py
artsleuth/models/: __init__.py  backbones.py  fusion.py  heads.py  registry.py
artsleuth/models/weights/: genre_head.pt  style_head.pt  taxonomy.json
artsleuth/preprocessing/: __init__.py  patches.py  transforms.py
artsleuth/utils/: __init__.py  io.py  visualization.py
docs/: methodology.md
examples/: forgery_validation_colab.ipynb  gentileschi_case_study.ipynb  quickstart.ipynb
tests/: conftest.py  test_adversarial.py  test_attribution.py  test_brushstroke.py  test_forgery.py  test_fusion.py  test_preprocessing.py  test_style.py  test_temporal.py  test_workshop.py
web/: README.md  __init__.py  app.py  components.py  theme.py
